// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyState > matches the snapshot with a hint 1`] = `
<div
  class="rounded-box border border-dashed border-slate-300 bg-white p-8 text-center"
>
  <p
    class="font-medium text-palette-bg"
  >
    No results
  </p>
  <p
    class="mt-1 text-sm text-slate-500"
  >
    Try a shorter search.
  </p>
</div>
`;

exports[`EmptyState > matches the snapshot without a hint 1`] = `
<div
  class="rounded-box border border-dashed border-slate-300 bg-white p-8 text-center"
>
  <p
    class="font-medium text-palette-bg"
  >
    No results
  </p>
</div>
`;
